[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
categories = ["gui"]
description = "Minimal UI library based on GTK+."
documentation = "https://antoyo.github.io/mg/mg/"
license = "MIT"
name = "mg"
repository = "https://github.com/antoyo/mg"
version = "0.14.0"

[dependencies]
gdk = "^0.13.0"
glib = "^0.10.0"
gtk = "^0.9.0"
log = "0.4"
mg-settings = "^0.4.0"
pango = "^0.9.0"
relm = "0.21"
relm-derive = "0.21"

[dev-dependencies]
gtk-test = "0.6.1"
mg-settings-macros = "^0.4.0"
pretty_env_logger = "0.2"

[features]
default = ["gtk/v3_22"]
nightly = []
